--- a/student_r02-01_variable_assignment.Rmd
+++ b/student_r02-01_variable_assignment.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ## 2-1-1 第一行程式碼
 
 ```{r 第一行程式碼}
-
+print('hello word')
 
 ```
 
@@ -21,42 +21,45 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r 變數與賦值}
 # 賦值: 將右側的值，"賦予"給左側的變數
-
-
-```
+x<-3
+y=55
+print(x)
+print(y)
 
 ## 2-1-3 基礎運算符號
 ```{r 加與減}
 # Addition and subtraction: 加與減
-
-
+print(1+9)
+print(x+y)
 ```
 
 ```{r 乘與除}
 # Multiplication and division: 乘與除
-
-
+print(49*0.5)
+print(49**0.5)
+print(85/5)
 ```
 
 ```{r 指數}
 # Exponentiation: 指數(次方)
 
-
-
+print(7**5)
+print(abs(-64))
 # Root: 平方根
+print(sqrt(64))
 
 ```
 
 ```{r 商數}
 # Floor Division 取整除 - 返回商的整数部分
-
-
+print(18%/%7)
+print(18/7)
 ```
 
 
 ```{r 餘數}
 # Modulo: 餘數
-
+print(18%%7)
 
 ```
 
@@ -86,15 +89,16 @@ story:
 ```{r 多個變數與計算}
 
 # Assign Variables
-
-
+x<- 100
+y<- 110/100
+z<- 7
 
 # Caculate for the result
-
+money<-x*y**z
 
 
 # Print out result
-
+print(money)
 
 ```
 
@@ -102,26 +106,26 @@ story:
 
 ```{r 重新賦值1}
 # Assign 10 to var1
-
+x<- 50
 
 # Check var1 
-
+x
 
 ```
 
 ```{r 重新賦值2}
 # Reassignment var1
 
-
+y<- 2
 # Check var1
-
+y
 
 ```
 
 ## 2-1-7 刪除已命名之變數
 
 ```{r}
-
+rm(z)
 # var1 # 錯誤: 找不到物件 'var1'
 
 ```
