--- a/r02-02_data_types.Rmd
+++ b/r02-02_data_types.Rmd
@@ -82,7 +82,7 @@ class(sys_time)
 national_day <- as.POSIXct("2021-10-10 08:00:00")
 national_day <- as.POSIXlt("2021-10-10 08:00:00", format="%Y-%m-%d %H:%M:%S")
 
-national_day - as.POSIXct("2021-10-09 08:00:00")
+national_day - as.POSIXct("2021-10-09 07:00:00")
 
 # 透過 format 將時間轉為字串
 class(Sys.time())
@@ -99,17 +99,17 @@ format(Sys.time(), "%Y-%m-%d")
 ```{r 確認資料型態}
 
 # 是否為整數
-is.integer(3)
+is.integer(3+0i)
 is.integer(3L)
 is.integer(3.6)
 
 # 是否為數值
-is.numeric(3.6)
+is.numeric(3.6+2i)
 is.numeric("TEST")
 is.numeric(3L)
 
-# 是否為字串
-is.character(3.6)
+# 是否為字串"
+is.character("3.6")
 
 # 是否為邏輯
 is.logical(FALSE)
@@ -127,11 +127,11 @@ is.logical(FALSE)
 # 轉為整數
 as.integer(3.6) # 3 無條件捨去
 as.integer(3) # 3 無條件捨去
-as.integer("t") # 不可轉，會出現 NA
+as.integer("one") # 不可轉，會出現 NA
 
 # 轉為數值
 as.numeric("100") # "100"
-as.numeric(F) # 0
+as.numeric(T) # 0
 as.numeric("TEST") # 不可轉，會出現 NA
 
 # 轉為字串
@@ -139,7 +139,7 @@ as.character(3.6) # "3.6"
 as.character(FALSE) # "FALSE"
 
 # 轉為邏輯
-as.logical(100) # TRUE
+as.logical("FGH") # TRUE
 as.logical(0) # FALSE
 
 ```
